fixed a minor issue in the navbar spacing

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -44,7 +44,7 @@
 
 #logo {
     width: 5%;
-    margin-left: 2%;
+    margin-left: 1%;
 }
 
 .nav-links {
